--- a/personal_site/index.html
+++ b/personal_site/index.html
@@ -3,10 +3,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gabe Lehmann's Portfolio</title>
+    <title>Gabe Lehmann - Portfolio</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="logo">
+            <img src="images/Logo2.png" height="100px" alt="Logo">
+        </div>
+        <nav>
+            <ul>
+                <li><a href="art.html">Art</a></li>
+                <li><a href="music.html">Music</a></li>
+                <li><a href="site-plan.html">Site Plan</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section class="intro">
+            <div class="image-me">
+                <img class="Me1" src="images/Me1.webp" height="300px" alt="Image of Me">
+            </div>
+            <div class="text">
+                <h1>Heyo!</h1>
+                <p>
+                    I'm Gabe! A University student based in Rexburg, Idaho. I love music, video games, movies, skating, and drawing.
+                </p>
+                <p>
+                    I'm really into computers. Right now, I'm on track for a computer science degree, taking programming, web design, and computer system classes to learn all about what makes the things I love tick.
+                </p>
+                <p>
+                    I dabble in many creative areas, but I have a particular love for drawing, playing the piano, and making music on my laptop.
+                </p>
+                <p>
+                    Most of my creative stuff has been submitted to several different contests and shows. I've submitted music for numerous competitions in high school, such as BPA, TSA, and Battle Cup, as well as other freelance beat contests.
+                </p>
+                <p>
+                    My music has not been publicly released yet, but will and can be found on Spotify. I also post my art and music to Instagram, Facebook, and TikTok.
+                </p>
+                <p>Reach out at <a href="mailto:gabeleh2024@gmail.com">gabeleh2024@gmail.com</a>!</p>
+            </div>
+        </section>
+
+        <section class="content-links">
+            <h2>Check Out My Stuff!</h2>
+            <div class="links">
+                <div class="box-art">
+                    <div class="image-art">
+                        <img src="images/art.jpg" height="300px" alt="Image of Drawing">
+                    </div>
+                    <p>Art</p>
+                </div>
+                <div class="box-music">
+                    <div class="image-music">
+                        <img src="images/music.jpg" height="300px" alt="Image of Music">
+                    </div>
+                    <p>Music</p>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <div class="logo">
+            <img src="images/Logo2.png" height="100px" alt="Logo">
+        </div>
+        <div class="social-icons">
+            <a href="https://www.instagram.com/"><img src="instagram-icon.png" alt="Instagram"></a>
+            <a href="https://www.facebook.com/"><img src="facebook-icon.png" alt="Facebook"></a>
+            <a href="https://www.tiktok.com/"><img src="tiktok-icon.png" alt="TikTok"></a>
+        </div>
+        <p>© 2025 Gabriel Lehmann. All rights reserved.</p>
+    </footer>
 </body>
 </html>
