--- a/personal_site/site-plan.html
+++ b/personal_site/site-plan.html
@@ -159,54 +159,52 @@
       <h3>[Page 2]</h3>
       <p>
         Logo
-Art
-Music
-Site Plan
-My Art
-Artwork
-Artwork
-Artwork
-Artwork
-Artwork
-Artwork
-Artwork
-Artwork
-Artwork
-Like What You See?
-I started drawing at a pretty young age, and I’m still drawing to this very day. This is a compilation of various drawings and artwork I’ve done over the years. The images you see are what I consider to be my best pieces in media. Of course, not all of my art is here (a lot of it isn’t very good), but these are my overall favorites that I thought deserved to be shared.
-
-Logo
-Instagram Facebook TikTok
-© 2025 Gabriel Lehmann. All rights reserved.
       </p>
+<p>Art</p>
+<p>Music</p>
+<p>Site Plan</p>
+<p>My Art</p>
+<p>Artwork 1</p>
+<p>Artwork 2</p>
+<p>Artwork 3</p>
+<p>Artwork 4</p>
+<p>Artwork 5</p>
+<p>Artwork 6</p>
+<p>Artwork 7</p>
+<p>Artwork 8</p>
+<p>Artwork 9</p>
+<p>Like What You See?
+I started drawing at a pretty young age, and I’m still drawing to this very day. This is a compilation of various drawings and artwork I’ve done over the years. The images you see are what I consider to be my best pieces in media. Of course, not all of my art is here (a lot of it isn’t very good), but these are my overall favorites that I thought deserved to be shared.
+</p>
+<p>Logo</p>
+<p>Instagram Facebook TikTok</p>
+<p>© 2025 Gabriel Lehmann. All rights reserved.</p>
       <p>Images for the Page 2</p>
         <img src="images/art1.png" height="200px" alt="image for page">
         <img src="images/art2.png" height="200px" alt="image for page">
 
       </ul>
       <h3>[Page 3]</h3>
-      <p>
-        Logo
-Art
-Music
-Site Plan
-My Music
-Music cover
-▶ Song 1
-▶ Song 2
-▶ Song 3
-▶ Song 4
-▶ Song 5
-▶ Song 5
-Stay Tuned For "Games That Don't Exist"!
-Music cover
-Like What You Hear?
-I started making music since the beginning of 2020. Since I’ve started, I’ve been having a blast writing and composing for years and years. I’m no professional, but the music listed is some of my favorite pieces that I’ve written so far. Making music is just something I really love and enjoy, so I’m going to continue to do it and do my best to get better and better.
+<p>Logo</p>
+<p>Art</p>
+<p>Music</p>
+<p>Site Plan</p>
+<p>My Music</p>
+<p>Music cover</p>
+<p>▶ Song 1</p>
+<p>▶ Song 2</p>
+<p>▶ Song 3</p>
+<p>▶ Song 4</p>
+<p>▶ Song 5</p>
+<p>▶ Song 5</p>
+<p>Stay Tuned For "Games That Don't Exist"!</p>
+<p>Music cover</p>
+<p>Like What You Hear?
+  I started making music since the beginning of 2020. Since I’ve started, I’ve been having a blast writing and composing for years and years. I’m no professional, but the music listed is some of my favorite pieces that I’ve written so far. Making music is just something I really love and enjoy, so I’m going to continue to do it and do my best to get better and better.</p>
 
-Logo
-Instagram Facebook TikTok
-© 2025 Gabriel Lehmann. All rights reserved.
-      </p>
+<p>Logo</p>
+<p>Instagram Facebook TikTok</p>
+<p>© 2025 Gabriel Lehmann. All rights reserved.</p>
       <p>Images for the Page 3</p>
         <img src="images/music1.png" height="200px" alt="image for page3">
         <img src="images/music2.png" height="200px" alt="image for page3">
