--- a/personal_site/site-plan.html
+++ b/personal_site/site-plan.html
@@ -96,10 +96,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Art <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Music  <!-- change this -->
         </div>
 
         <div class="top">
@@ -156,7 +156,7 @@
         <img src="images/music.jpg" height="200" alt="image for homepage">
 
       </ul>
-      <h3>Art</h3>
+      <h3>[Page 2]</h3>
       <p>
         Logo
       </p>
@@ -184,7 +184,7 @@ I started drawing at a pretty young age, and I’m still drawing to this very da
         <img src="images/art2.png" height="200px" alt="image for page">
 
       </ul>
-      <h3>Music</h3>
+      <h3>[Page 3]</h3>
 <p>Logo</p>
 <p>Art</p>
 <p>Music</p>
