--- a/ice_challenge_4/ice_challenge_4.html
+++ b/ice_challenge_4/ice_challenge_4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Post Three</title>
+    <title>Ice Challenge 4</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
