--- a/wwr/page_2.html
+++ b/wwr/page_2.html
@@ -6,7 +6,84 @@
     <title>Raft Finder | Page 2</title>
     <link rel="stylesheet" href="styles/page_2.css">
 </head>
+
 <body>
-    
+    <body>
+        <div id="content">
+        <header>
+            <a id="logo_link" href="index.html">
+                <img src="images/RaftFinder.png" alt="Raft Finder Logo" height="100" width="100">
+            </a>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="page_2.html">Page 2</a>
+                <a href="site-plan-rafting.html">Site Plan</a>
+                <a href="contactus.html">Contact Us</a>
+            </nav>
+        </header>
+
+    <main>
+        <section class="hero">
+            <div class="hero-content">
+                <div class="hero-image-1"></div>
+                <div class="hero-text">
+                    <h1>Medium length hero headline</h1>
+                    <p>Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos.</p>
+                </div>
+            </div>
+            <div class="hero-content reverse">
+                <div class="hero-text">
+                    <h1>Medium length hero headline</h1>
+                    <p>Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos.</p>
+                </div>
+                <div class="hero-image-2"></div>
+            </div>
+        </section>
+
+        <section class="features">
+            <div class="feature">
+                <p>Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae.</p>
+                <div class="name">Name Lastname</div>
+            </div>
+            <div class="feature">
+                <p>Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae.</p>
+                <div class="name">Name Lastname</div>
+            </div>
+            <div class="feature">
+                <p>Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae.</p>
+                <div class="name">Name Lastname</div>
+            </div>
+        </section>
+
+        <section class="signup">
+            <h2>Sign up form</h2>
+            <form>
+                <input type="text" placeholder="Username" required>
+                <input type="email" placeholder="Email" required>
+                <input type="password" placeholder="Password" required>
+                <button type="submit">Sign up</button>
+                <p>By signing up, you agree to our <a href="#">Terms of Service</a> and <a href="#">Privacy Policy</a>.</p>
+            </form>
+        </section>
+    </main>
+
+    <footer>
+        <div class="footer-top">
+            <div class="logo">Logo</div>
+            <nav>
+                <ul>
+                    <li><a href="#">Link one</a></li>
+                    <li><a href="#">Link two</a></li>
+                    <li><a href="#">Link three</a></li>
+                    <li><a href="#">Link four</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="footer-bottom">
+            <p>© 2024 Your Website. All rights reserved.</p>
+            <a href="#">Privacy Policy</a>
+            <a href="#">Terms of Service</a>
+        </div>
+    </footer>
 </body>
 </html>
