Personal Site Content

--- a/personal_site/art.html
+++ b/personal_site/art.html
@@ -12,6 +12,7 @@
                 <img src="images/Logo2.png" height="100px" alt="Logo">
             </div>
             <ul>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="art.html">Art</a></li>
                 <li><a href="music.html">Music</a></li>
                 <li><a href="site-plan.html">Site Plan</a></li>
@@ -22,15 +23,12 @@
     <main>
         <h1>My Art</h1>
         <section class="gallery">
-            <div class="image1"><img src="images/art1.png" height="300px" alt="Artwork"></div>
-            <div class="image2"><img src="images/art2.png" height="300px" alt="Artwork"></div>
-            <div class="image3"><img src="#" alt="Artwork"></div>
-            <div class="image4"><img src="#" alt="Artwork"></div>
-            <div class="image5"><img src="#" alt="Artwork"></div>
-            <div class="image6"><img src="#" alt="Artwork"></div>
-            <div class="image7"><img src="#" alt="Artwork"></div>
-            <div class="image8"><img src="#" alt="Artwork"></div>
-            <div class="image9"><img src="#" alt="Artwork"></div>
+            <div class="image1"><img src="images/art1.png" height="500px" alt="Artwork"></div>
+            <div class="image2"><img src="images/art2.png" height="500px" alt="Artwork"></div>
+            <div class="image3"><img src="images/lemondemon.jpg" height="500px" alt="Artwork"></div>
+            <div class="image4"><img src="images/mnm.jpg" height="500px" alt="Artwork"></div>
+            <div class="image5"><img src="images/vhs.jpg" height="500px" alt="Artwork"></div>
+            <div class="image6"><img src="images/spider-man.jpg" height="500px" alt="Artwork"></div>
         </section>
     </main>
     
@@ -44,9 +42,9 @@
             <img src="images/Logo2.png" height="100px" alt="Logo">
         </div>
         <div class="social-icons">
-            <a href="https://www.instagram.com/"><img src="instagram-icon.png" alt="Instagram"></a>
-            <a href="https://www.facebook.com/"><img src="facebook-icon.png" alt="Facebook"></a>
-            <a href="https://www.tiktok.com/"><img src="tiktok-icon.png" alt="TikTok"></a>
+            <a href="https://www.instagram.com/gabe_lehmann/"><img src="images/instagram_logo.png" height="50px" alt="Instagram"></a>
+            <a href="https://www.facebook.com/profile.php?id=100072262160649"><img src="images/facebook_logo.png" height="50px" alt="Facebook"></a>
+            <a href="https://www.tiktok.com/@purps2024"><img src="images/tiktok_logo.webp" height="50px" alt="TikTok"></a>
         </div>
         <p>© 2025 Gabriel Lehmann. All rights reserved.</p>
     </footer>
