--- a/personal_site/index.html
+++ b/personal_site/index.html
@@ -13,6 +13,7 @@
         </div>
         <nav>
             <ul>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="art.html">Art</a></li>
                 <li><a href="music.html">Music</a></li>
                 <li><a href="site-plan.html">Site Plan</a></li>
@@ -53,13 +54,13 @@
                     <div class="image-art">
                         <img src="images/art.jpg" height="300px" alt="Image of Drawing">
                     </div>
-                    <p>Art</p>
+                    <a href="art.html">Art</a>
                 </div>
                 <div class="box-music">
                     <div class="image-music">
                         <img src="images/music.jpg" height="300px" alt="Image of Music">
                     </div>
-                    <p>Music</p>
+                    <a href="music.html">Music</a>
                 </div>
             </div>
         </section>
@@ -70,11 +71,11 @@
             <img src="images/Logo2.png" height="100px" alt="Logo">
         </div>
         <div class="social-icons">
-            <a href="https://www.instagram.com/"><img src="instagram-icon.png" alt="Instagram"></a>
-            <a href="https://www.facebook.com/"><img src="facebook-icon.png" alt="Facebook"></a>
-            <a href="https://www.tiktok.com/"><img src="tiktok-icon.png" alt="TikTok"></a>
+            <a href="https://www.instagram.com/gabe_lehmann/"><img src="images/instagram_logo.png" height="50px" alt="Instagram"></a>
+            <a href="https://www.facebook.com/profile.php?id=100072262160649"><img src="images/facebook_logo.png" height="50px" alt="Facebook"></a>
+            <a href="https://www.tiktok.com/@purps2024"><img src="images/tiktok_logo.webp" height="50px" alt="TikTok"></a>
         </div>
-        <p>© 2025 Gabriel Lehmann. All rights reserved.</p>
+        <p>© 2025 Gabriel Lehmann.</p>
     </footer>
 </body>
 </html>
