--- a/personal_site/music.html
+++ b/personal_site/music.html
@@ -12,6 +12,7 @@
         </div>
         <nav>
             <ul>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="art.html">Art</a></li>
                 <li><a href="music.html">Music</a></li>
                 <li><a href="site-plan.html">Site Plan</a></li>
@@ -24,12 +25,12 @@
         <section class="music-gallery">
             <div class="image1"><img src="images/music1.png" height="300px" alt="Music cover"></div>
             <ul class="song-list">
-                <li><button>▶</button> Song 1</li>
-                <li><button>▶</button> Song 2</li>
-                <li><button>▶</button> Song 3</li>
-                <li><button>▶</button> Song 4</li>
-                <li><button>▶</button> Song 5</li>
-                <li><button>▶</button> Song 5</li>
+                <li><audio controls src="music/Fallen Down Soft Piano.wav"></audio>"Fallen Down" - Piano Arrangement</li>
+                <li><audio controls src="music/Emails.wav"></audio>"Emails"</li>
+                <li><audio controls src="music/White Noise.wav"></audio>"White Noise"</li>
+                <li><audio controls src="music/Buy Somethin' Will Ya!.wav"></audio>"One-Stop Cat Shop"</li>
+                <li><audio controls src="music/Step it Up.wav"></audio>"Step it Up"</li>
+                <li><audio controls src="music/Techno Syndrome.wav"></audio>"Techno Syndrome" - Remix (W.I.P.)</li>
             </ul>
             <div class="image2">
                 <h2>Stay Tuned For "Games That Don't Exist"!</h2>
@@ -47,9 +48,9 @@
             <img src="images/Logo2.png" height="100px" alt="Logo">
         </div>
         <div class="social-icons">
-            <a href="https://www.instagram.com/"><img src="instagram-icon.png" alt="Instagram"></a>
-            <a href="https://www.facebook.com/"><img src="facebook-icon.png" alt="Facebook"></a>
-            <a href="https://www.tiktok.com/"><img src="tiktok-icon.png" alt="TikTok"></a>
+            <a href="https://www.instagram.com/gabe_lehmann/"><img src="images/instagram_logo.png" height="50px" alt="Instagram"></a>
+            <a href="https://www.facebook.com/profile.php?id=100072262160649"><img src="images/facebook_logo.png" height="50px" alt="Facebook"></a>
+            <a href="https://www.tiktok.com/@purps2024"><img src="images/tiktok_logo.webp" height="50px" alt="TikTok"></a>
         </div>
         <p>© 2025 Gabriel Lehmann. All rights reserved.</p>
     </footer>
