Personal Site CSS

--- a/personal_site/music.html
+++ b/personal_site/music.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gabe Lehmann - Music</title>
+    <link rel="stylesheet" href="styles/music.css">
 </head>
 <body>
     <header>
@@ -52,7 +53,7 @@
             <a href="https://www.facebook.com/profile.php?id=100072262160649"><img src="images/facebook_logo.png" height="50px" alt="Facebook"></a>
             <a href="https://www.tiktok.com/@purps2024"><img src="images/tiktok_logo.webp" height="50px" alt="TikTok"></a>
         </div>
-        <p>© 2025 Gabriel Lehmann. All rights reserved.</p>
+        <p>© 2025 Gabriel Lehmann.</p>
     </footer>
 </body>
 </html>
