--- a/personal_site/art.html
+++ b/personal_site/art.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gabe Lehmann - Art</title>
+    <link rel="stylesheet" href="styles/art.css">
 </head>
 <body>
     <header>
+        <div class="logo">
+            <img src="images/Logo2.png" height="100px" alt="Logo">
+        </div>
         <nav>
-            <div class="logo">
-                <img src="images/Logo2.png" height="100px" alt="Logo">
-            </div>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="art.html">Art</a></li>
@@ -46,7 +47,7 @@
             <a href="https://www.facebook.com/profile.php?id=100072262160649"><img src="images/facebook_logo.png" height="50px" alt="Facebook"></a>
             <a href="https://www.tiktok.com/@purps2024"><img src="images/tiktok_logo.webp" height="50px" alt="TikTok"></a>
         </div>
-        <p>© 2025 Gabriel Lehmann. All rights reserved.</p>
+        <p>© 2025 Gabriel Lehmann.</p>
     </footer>
 </body>
 </html>
