--- a/personal_site/art.html
+++ b/personal_site/art.html
@@ -35,7 +35,7 @@
     
     <section class="about">
         <h2>Like What You See?</h2>
-        <p>I started drawing at a pretty young age, and I’m still drawing to this very day. This is a compilation of various drawings and artwork I’ve done over the years. The images you see are what I consider to be my best pieces in media. Of course, not all of my art is here (a lot of it isn’t very good), but these are my overall favorites that I thought deserved to be shared.</p>
+        <p>I started drawing at a pretty young age, and I’m still drawing to this very day. This is a compilation of various drawings and artwork I’ve done over the years. The images you see are what I consider to be my best pieces of media. Of course, not all of my art is here (a lot of it isn’t very good), but these are my overall favorites that I thought deserved to be shared.</p>
     </section>
     
     <footer>
