Finished Personal Site

--- a/personal_site/index.html
+++ b/personal_site/index.html
@@ -9,14 +9,13 @@
 <body>
     <header>
         <div class="logo">
-            <img src="images/Logo2.png" height="100px" alt="Logo">
+            <a href="index.html"><img src="images/Logo2.png" height="100px" alt="Home"></a>
         </div>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="art.html">Art</a></li>
                 <li><a href="music.html">Music</a></li>
-                <li><a href="site-plan.html">Site Plan</a></li>
             </ul>
         </nav>
     </header>
@@ -24,7 +23,7 @@
     <main>
         <section class="intro">
             <div class="image-me">
-                <img class="Me1" src="images/Me1.webp" height="400px" alt="Image of Me">
+                <img src="images/Me1.webp" height="400px" alt="Image of Me">
             </div>
             <div class="text">
                 <h1>Heyo!</h1>
@@ -74,6 +73,9 @@
             <a href="https://www.instagram.com/gabe_lehmann/"><img src="images/instagram_logo.png" height="50px" alt="Instagram"></a>
             <a href="https://www.facebook.com/profile.php?id=100072262160649"><img src="images/facebook_logo.png" height="50px" alt="Facebook"></a>
             <a href="https://www.tiktok.com/@purps2024"><img src="images/tiktok_logo.webp" height="50px" alt="TikTok"></a>
+        </div>
+        <div class="site-plan">
+            <a href="site-plan.html">Site Plan</a>
         </div>
         <p>© 2025 Gabriel Lehmann.</p>
     </footer>
