--- a/personal_site/site-plan.html
+++ b/personal_site/site-plan.html
@@ -30,6 +30,7 @@
       <hr>
       <h2>Branding</h2>
       <h3>Website Logo</h3>
+      <p>(It's there, but the logo is white with a transparent background. Drag the image into a new tab to view it.)</p>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
       <img src="images/Logo2.png" alt="Logo image">
       <hr>
@@ -47,7 +48,7 @@
       <table class="colors">
         <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
         <!-- Switch to the site-plan.css file and change your colors there. -->
-        <tr><td class="primary">#FFFFFF</td><td class="secondary">#81F4E1</td><td class="accent1">#56CBF9</td><td class="accent2">#FF729F</td></tr>
+        <tr><td class="primary">#F4F4F9</td><td class="secondary">#5C67F2</td><td class="accent1">#333333</td><td class="accent2">#F5CC00</td></tr>
       </table>
 
       <!-- ------------------------Step 9------------------------------ -->
