--- a/personal_site/index.html
+++ b/personal_site/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="index.html"><img src="images/Logo2.png" height="100px" alt="Home"></a>
+            <a href="index.html"><img src="images/Logo2.png" height="100" alt="Home"></a>
         </div>
         <nav>
             <ul>
@@ -23,7 +23,7 @@
     <main>
         <section class="intro">
             <div class="image-me">
-                <img src="images/Me1.webp" height="400px" alt="Image of Me">
+                <img src="images/Me1.webp" height="400" alt="Image of Me">
             </div>
             <div class="text">
                 <h1>Heyo!</h1>
@@ -51,13 +51,13 @@
             <div class="links">
                 <div class="box-art">
                     <div class="image-art">
-                        <img src="images/art.jpg" height="300px" alt="Image of Drawing">
+                        <img src="images/art.jpg" height="300" alt="Image of Drawing">
                     </div>
                     <a href="art.html">Art</a>
                 </div>
                 <div class="box-music">
                     <div class="image-music">
-                        <img src="images/music.jpg" height="300px" alt="Image of Music">
+                        <img src="images/music.jpg" height="300" alt="Image of Music">
                     </div>
                     <a href="music.html">Music</a>
                 </div>
@@ -67,12 +67,12 @@
 
     <footer>
         <div class="logo">
-            <img src="images/Logo2.png" height="100px" alt="Logo">
+            <img src="images/Logo2.png" height="100" alt="Logo">
         </div>
         <div class="social-icons">
-            <a href="https://www.instagram.com/gabe_lehmann/"><img src="images/instagram_logo.png" height="50px" alt="Instagram"></a>
-            <a href="https://www.facebook.com/profile.php?id=100072262160649"><img src="images/facebook_logo.png" height="50px" alt="Facebook"></a>
-            <a href="https://www.tiktok.com/@purps2024"><img src="images/tiktok_logo.webp" height="50px" alt="TikTok"></a>
+            <a href="https://www.instagram.com/gabe_lehmann/"><img src="images/instagram_logo.png" height="50" alt="Instagram"></a>
+            <a href="https://www.facebook.com/profile.php?id=100072262160649"><img src="images/facebook_logo.png" height="50" alt="Facebook"></a>
+            <a href="https://www.tiktok.com/@purps2024"><img src="images/tiktok_logo.webp" height="50" alt="TikTok"></a>
         </div>
         <div class="site-plan">
             <a href="site-plan.html">Site Plan</a>
