--- a/personal_site/index.html
+++ b/personal_site/index.html
@@ -51,13 +51,13 @@
             <div class="links">
                 <div class="box-art">
                     <div class="image-art">
-                        <img src="images/art.jpg" height="300" alt="Image of Drawing">
+                        <a href="art.html"><img src="images/art.jpg" height="300" alt="Image of Drawing"></a>
                     </div>
                     <a href="art.html">Art</a>
                 </div>
                 <div class="box-music">
                     <div class="image-music">
-                        <img src="images/music.jpg" height="300" alt="Image of Music">
+                        <a href="music.html"><img src="images/music.jpg" height="300" alt="Image of Music"></a>
                     </div>
                     <a href="music.html">Music</a>
                 </div>
@@ -67,7 +67,7 @@
 
     <footer>
         <div class="logo">
-            <img src="images/Logo2.png" height="100" alt="Logo">
+            <a href="index.html"><img src="images/Logo2.png" height="100" alt="Home"></a>
         </div>
         <div class="social-icons">
             <a href="https://www.instagram.com/gabe_lehmann/"><img src="images/instagram_logo.png" height="50" alt="Instagram"></a>
