--- a/personal_site/art.html
+++ b/personal_site/art.html
@@ -39,7 +39,7 @@
     
     <footer>
         <div class="logo">
-            <img src="images/Logo2.png" height="100px" alt="Logo">
+            <a href="index.html"><img src="images/Logo2.png" height="100" alt="Home"></a>
         </div>
         <div class="social-icons">
             <a href="https://www.instagram.com/gabe_lehmann/"><img src="images/instagram_logo.png" height="50px" alt="Instagram"></a>
